29Items-Projects/1Java/3Inventory-Management-System/infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory
  labels:
    app.kubernetes.io/part-of: inventory-management
